added code for pilot check

--- a/CUNY_FACIAL/Code/pilot_check.ipynb
+++ b/CUNY_FACIAL/Code/pilot_check.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-20T18:59:01.389297Z",
@@ -28,7 +28,42 @@
     "import numpy as np\n",
     "import sounddevice as sd\n",
     "import cv2\n",
-    "from scipy.signal import iirnotch, filtfilt\n"
+    "from scipy.signal import iirnotch, filtfilt\n",
+    "from glob import glob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['E:\\\\CUNY\\\\sub-P1111',\n",
+       " 'E:\\\\CUNY\\\\sub-P1111.zip',\n",
+       " 'E:\\\\CUNY\\\\sub-P5882302',\n",
+       " 'E:\\\\CUNY\\\\sub-P5882302.tar',\n",
+       " 'E:\\\\CUNY\\\\sub-P5520920',\n",
+       " 'E:\\\\CUNY\\\\sub-P5520920.tar',\n",
+       " 'E:\\\\CUNY\\\\sub-P5882302.tar.gz',\n",
+       " 'E:\\\\CUNY\\\\sub-P5520920.tar.gz',\n",
+       " 'E:\\\\CUNY\\\\sub-P5149890',\n",
+       " 'E:\\\\CUNY\\\\sub-P5149890.tar',\n",
+       " 'E:\\\\CUNY\\\\sub-P5217519',\n",
+       " 'E:\\\\CUNY\\\\sub-P5217519.tar.gz',\n",
+       " 'E:\\\\CUNY\\\\sub-9999',\n",
+       " 'E:\\\\CUNY\\\\sub-9999.tar.gz',\n",
+       " 'E:\\\\CUNY\\\\sub-P5149890.tar.gz']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X FOR X IN glob(\"E:\\CUNY\\*\")"
    ]
   },
   {
@@ -38,6 +73,13 @@
    "source": [
     "# Load Data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
