Begining of QC report

--- a/CUNY_FACIAL/Code/cuny_data.ipynb
+++ b/CUNY_FACIAL/Code/cuny_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T16:20:52.821889Z",
@@ -27,7 +27,9 @@
     "import numpy as np\n",
     "from fpdf import FPDF\n",
     "from glob import glob\n",
-    "import os\n"
+    "import os\n",
+    "from datetime import date\n",
+    "import calendar\n"
    ]
   },
   {
@@ -154,7 +156,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Thursday'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Generate today's date\n",
+    "today = date.today()\n",
+    "today = today.strftime(\"%B %d, %Y\")\n",
+    "today\n",
+    "# generate the day of the week\n",
+    "day_of_week = \n",
+    "day_of_week"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T16:23:11.519334Z",
@@ -170,7 +198,9 @@
     "    #set font for the title\n",
     "    pdf.set_font(\"Arial\", size=12)\n",
     "    #Title of the document\n",
-    "    pdf.cell(200, 10, \"CUNY Data Report\",ln=True, align='C')\n",
+    "    today = date.today()\n",
+    "    today = today.strftime(\"%B %d, %Y\")\n",
+    "    pdf.cell(200, 10, f\"CUNY Data Report, {calendar.day_name[date.today().weekday()]}, {today} \",ln=True, align='C')\n",
     "    pdf.cell(200, 10, txt=\"Plot in PDF Example\", ln=True, align='C')\n",
     "\n",
     "    # Step 3: Insert the plot image into the PDF\n",
