Getting into the experiment sections

--- a/CUNY_FACIAL/Code/cuny_data.ipynb
+++ b/CUNY_FACIAL/Code/cuny_data.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
     "    data, header = pyxdf.load_xdf(subject_xdf_paths[i])\n",
     "    xdfs[subject] = data\n",
     "    streams_collected = [stream['info']['name'][0] for stream in data]\n",
-    "    streams_collected\n",
+    "    \n",
     "    df.loc[df['Subject'] == subject, 'datetime'] = header['info']['datetime'][0]\n",
     "    for s in streams_collected:\n",
     "        df.loc[df['Subject'] == subject, s] = 1\n",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,12 +152,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_stim(xdfs, subject):\n",
     "    data = xdfs[subject]\n",
+    "    streams_collected = [stream['info']['name'][0] for stream in data]\n",
     "    stim_dat = data[streams_collected.index('Stimuli_Markers')]\n",
     "    stim_df = pd.DataFrame(stim_dat['time_series'])\n",
     "    stim_df.rename(columns={0: 'trigger'}, inplace=True)\n",
@@ -207,143 +208,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>trigger</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1727281157.5814393</td>\n",
-       "      <td>775473960.7124</td>\n",
-       "      <td>1727281157.980177</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1727281158.0122104</td>\n",
-       "      <td>775473994.0457</td>\n",
-       "      <td>1727281158.0204892</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1727281158.0254886</td>\n",
-       "      <td>775474027.3791</td>\n",
-       "      <td>1727281158.0334888</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1727281158.0364916</td>\n",
-       "      <td>775474060.7124</td>\n",
-       "      <td>1727281158.0614853</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>1727281158.0654852</td>\n",
-       "      <td>775474094.0457</td>\n",
-       "      <td>1727281158.094527</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43499</th>\n",
-       "      <td>43500</td>\n",
-       "      <td>1727282607.8744528</td>\n",
-       "      <td>776923927.3791</td>\n",
-       "      <td>1727282607.9204524</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43500</th>\n",
-       "      <td>43501</td>\n",
-       "      <td>1727282607.924453</td>\n",
-       "      <td>776923960.7124</td>\n",
-       "      <td>1727282607.951457</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43501</th>\n",
-       "      <td>43502</td>\n",
-       "      <td>1727282607.9544542</td>\n",
-       "      <td>776923994.0457</td>\n",
-       "      <td>1727282608.0184991</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43502</th>\n",
-       "      <td>43503</td>\n",
-       "      <td>1727282608.0215077</td>\n",
-       "      <td>776924027.3791</td>\n",
-       "      <td>1727282608.048523</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43503</th>\n",
-       "      <td>43354</td>\n",
-       "      <td>1727282603.0279162</td>\n",
-       "      <td>776919060.7124</td>\n",
-       "      <td>1727282603.0409129</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>43504 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      trigger                   1               2                   3\n",
-       "0           1  1727281157.5814393  775473960.7124   1727281157.980177\n",
-       "1           2  1727281158.0122104  775473994.0457  1727281158.0204892\n",
-       "2           3  1727281158.0254886  775474027.3791  1727281158.0334888\n",
-       "3           4  1727281158.0364916  775474060.7124  1727281158.0614853\n",
-       "4           5  1727281158.0654852  775474094.0457   1727281158.094527\n",
-       "...       ...                 ...             ...                 ...\n",
-       "43499   43500  1727282607.8744528  776923927.3791  1727282607.9204524\n",
-       "43500   43501   1727282607.924453  776923960.7124   1727282607.951457\n",
-       "43501   43502  1727282607.9544542  776923994.0457  1727282608.0184991\n",
-       "43502   43503  1727282608.0215077  776924027.3791   1727282608.048523\n",
-       "43503   43354  1727282603.0279162  776919060.7124  1727282603.0409129\n",
-       "\n",
-       "[43504 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "get_stim(xdfs, sub_ids[0])"
+    "\n",
+    "trials = ['RestingState', 'StoryListening', 'CampFriend', 'FrogDissection', 'DanceContest', 'ZoomClass', 'Tornado', 'BirthdayParty','SocialTask']\n",
+    "for subject in sub_ids:\n",
+    "    stim = get_stim(xdfs, subject)\n",
+    "    for trial in trials:\n",
+    "        # Find out if event columns contains Onset and Offset for RestingState\n",
+    "        df['has_'+trial] = stim.event.str.contains('Onset_'+ trial).sum() + stim.event.str.contains('Offset_'+ trial).sum() == 2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trials = ['RestingState', 'StoryListening', 'CampFriend', 'FrogDissection', 'DanceContest', 'ZoomClass', 'Tornado', 'BirthdayParty','SocialTask']\n",
+    "\n",
+    "for t in trials:\n",
+    "    calculated_values['Completed '+t] =  f'{df['has_'+t].sum() / len(df) * 100} %'  "
    ]
   },
   {
@@ -356,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 47,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T16:23:11.519334Z",
@@ -390,14 +277,24 @@
     "    # add calculated values\n",
     "    for key in ['EEG', 'Physiology', 'Video', 'EyeTracker', 'Stimuli', 'Audio']:\n",
     "        pdf.ln(3)\n",
-    "        pdf.cell(180, 5, txt= f\"{key}\" + \" : \" + str(calculated_values[key]), ln=True, align='L' , border=1)\n",
+    "        pdf.cell(180, 5, txt= f\"{key}\" + \" : \" + str(values[key]), ln=True, align='L' , border=1)\n",
+    "\n",
+    "    # Resting State\n",
+    "    pdf.ln(5)\n",
+    "    pdf.cell(180, 5, txt=f\"Completed Resting State: {values['Completed RestingState']}%\", ln=True, align='L', border=1, fill=False)\n",
+    "    # Story State\n",
+    "    pdf.ln(5)\n",
+    "    pdf.cell(180, 5, txt=f\"Completed Story Listening: {values['Completed StoryListening']}%\", ln=True, align='L', border=1, fill=False)\n",
+    "    # Resting State\n",
+    "    pdf.ln(5)\n",
+    "    pdf.cell(180, 5, txt=f\"Completed Social Task: {values['Completed SocialTask']}%\", ln=True, align='L', border=1, fill=False)\n",
     "\n",
     "    pdf.output(file_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
